# SysAgent

./: .gitignore  AI_Agent_Planning.md  CREWAI_REPORT_FINAL.md  PROJECT_HANDOFF.md  README.md  SYSAGENT_MASTER_DOCUMENTATION.md  SYSAGENT_ROADMAP.md
ai_engine/: .gitignore  debug_state.txt  main.py  requirements.txt  test_endpoint.py
ai_engine/agents/crewai/: crew.py  mcp_tool_wrappers.py  models.py  tools.py
ai_engine/agents/langgraph/: nodes.py  orchestrator.py
ai_engine/core/: agent_hub.py  agent_state.py  config.py  executor.py  langgraph_checkpoint.py  mcp_client.py  mcp_process.py  mcp_tool_planner.py  response_parse.py  runtime_health.py  screen_context.py  script_policy.py  security.py  security_guardian.py
ai_engine/mcp_servers/: __init__.py  local_system_server.py  local_system_tools.py
ai_engine/tests/: __init__.py  test_agent_hub_config.py  test_crewai_mcp_wrappers.py  test_langgraph_mcp_read.py  test_mcp_foundation.py  test_mcp_tool_planner.py  test_routing_eval_suite.py  test_runtime_health.py  test_screen_context.py  test_security_guardian_policy.py  test_terminal_hardening.py
ai_engine/tests/evals/: read_only_routing_cases.json
backend/: .gitignore  Dockerfile  pom.xml  startup_log.txt
frontend/: angular.json  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
node_runtime/: .gitignore  README.md  pyproject.toml
node_runtime/sysagent_node/: cli.py  config.py  desktop_context.py  diagnostics.py  executor.py  http_client.py  metrics.py  service.py
node_runtime/tests/: test_cli.py  test_config.py  test_diagnostics.py  test_executor.py  test_metrics.py  test_service.py
(+172 files in other folders)
