[project]
name = "sysagent-node"
version = "0.1.0"
description = "SysAgent remote node runtime"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9,<8",
]

[project.scripts]
sysagent-node = "sysagent_node.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sysagent_node*"]
