[project]
name = "sysagent-node"
version = "0.1.0"
description = "SysAgent remote node runtime"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "SysAgent" },
]
dependencies = [
    "pillow>=10,<12",
    "psutil>=5.9,<8",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.scripts]
sysagent-node = "sysagent_node.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sysagent_node*"]
